--- a/src/app/admin/accom/add/add.component.html
+++ b/src/app/admin/accom/add/add.component.html
@@ -32,7 +32,7 @@
             <mat-form-field>
                 <mat-label>숙소 주소</mat-label>
                 <input type="text" matInput placeholder="숙소 주소" autocomplete="off" 
-                    formControlName="Addr" readonly (click)="srchAddr()">
+                    formControlName="Address" readonly (click)="srchAddr()">
             </mat-form-field>
             <h5>숙소 대표번호를 입력해주세요.</h5>
             <mat-form-field>
