객실 등록 상세정보, 가격정보 입력 	modified:   src/app/admin/accom/unit/edit/edit.component.html 	modified:   src/app/admin/accom/unit/edit/edit.component.scss 	modified:   src/app/admin/accom/unit/edit/edit.component.ts 	modified:   src/app/admin/admin.component.ts 	modified:   src/app/admin/admin.module.ts 	modified:   src/app/global/global.ts 	modified:   src/styles.scss

--- a/src/app/admin/accom/unit/edit/edit.component.html
+++ b/src/app/admin/accom/unit/edit/edit.component.html
@@ -2,61 +2,158 @@
     <h3>객실 관리</h3>
     <div class="form-splitter">
         <as-split useTransition="true" gutterSize="0" unit="pixel">
-            <as-split-area [size]="listView" minSize="0" order="1" visible="true">
+            <as-split-area [size]="container.outerWidth > 660 ?  150 : (selectedTab === null ? '*' : 0)" minSize="0" order="1" visible="true">
                 <div class="split-side">
-                    asdasdasd
-                </div>
+                    <ul>
+                        <li [@focusTab]="selectedTab === 0 ? 'focused' : 'focusout'" (click)="selectedTab = 0; title = '객실정보'">객실정보</li>
+                        <li [@focusTab]="selectedTab === 1 ? 'focused' : 'focusout'" (click)="selectedTab = 1; title = '판매가'">판매가</li>
+                        <li [@focusTab]="selectedTab === 2 ? 'focused' : 'focusout'" (click)="selectedTab = 2; title = '사진등록'">사진등록</li>
+                        <li [@focusTab]="selectedTab === 3 ? 'focused' : 'focusout'" (click)="selectedTab = 3; title = '옵션'">옵션</li>
+                    </ul>
+                </div> 
             </as-split-area>
-            <as-split-area size="*" order="2" visible="true">
-                <div class="content-body form-unit">
-                    <form [formGroup]="formunit">
-                        <h5>객실 이름을 입력해주세요.</h5>
-                        <mat-form-field>
-                            <mat-label>객실명</mat-label>
-                            <input type="text" matInput placeholder="객실 이름" autocomplete="off"
-                            formControlName="UnitNm">
-                        </mat-form-field>
-                        <h5>객실 면적을 입력해주세요.</h5>
-                        <mat-form-field>
-                            <mat-label>평</mat-label>
-                            <input type="text" matInput placeholder="평수" autocomplete="off"
-                            formControlName="UnitWidth">
-                        </mat-form-field>
-                        <h5>객실 인원을 입력해주세요.</h5>
-                        <div class="form-half">
+            <as-split-area [size]="container.outerWidth > 660 ? '*' : (selectedTab === null ? 0 : '*')" order="2" visible="true">
+                <div class="content-header" *ngIf="container.outerWidth < 660">
+                    <button (click)="selectedTab = null">
+                        <mat-icon>arrow_backward</mat-icon>
+                    </button>
+                    <span>{{title}}</span>
+                </div>
+                <div class="content-body">
+                    <div *ngIf="selectedTab === 0" class="form-unit">
+                        <form [formGroup]="formunit">
+                            <h5>객실 이름을 입력해주세요.</h5>
                             <mat-form-field>
-                                <mat-label>기준인원</mat-label>
-                                <input type="text" matInput placeholder="기준인원" autocomplete="off"
-                                formControlName="GuestStd">
+                                <mat-label>객실명</mat-label>
+                                <input type="text" matInput placeholder="객실 이름" autocomplete="off"
+                                formControlName="UnitNm">
                             </mat-form-field>
+                            <h5>객실 면적을 입력해주세요.</h5>
                             <mat-form-field>
-                                <mat-label>최대인원</mat-label>
-                                <input type="text" matInput placeholder="최대인원" autocomplete="off"
-                                formControlName="GuestMax">
+                                <mat-label>평</mat-label>
+                                <input type="text" matInput placeholder="평수" autocomplete="off"
+                                formControlName="UnitWidth">
+                            </mat-form-field>
+                            <h5>객실 인원을 입력해주세요.</h5>
+                            <div class="form-half">
+                                <mat-form-field>
+                                    <mat-label>기준인원</mat-label>
+                                    <input type="text" matInput placeholder="기준인원" autocomplete="off"
+                                    formControlName="GuestStd">
+                                </mat-form-field>
+                                <mat-form-field>
+                                    <mat-label>최대인원</mat-label>
+                                    <input type="text" matInput placeholder="최대인원" autocomplete="off"
+                                    formControlName="GuestMax">
+                                </mat-form-field>
+                            </div>
+                        </form>
+                        <h5>기본정보를 입력해주세요.</h5>
+                        <ul class="list-decorate-dot">
+                            <li *ngFor="let info of optional.infoUnit; let i = index" (click)="editList('infoUnit', info, i)">
+                                {{info}}
+                                <button *ngIf="editItem === info" (click)="delList('infoUnit', i)"><i class="fa fa-minus"></i></button>
+                            </li>
+                        </ul>
+                        <mat-form-field>
+                            <mat-label>기본정보</mat-label>
+                            <input type="text" matInput placeholder="예) 유아 기준은 만 5세입니다." maxlength="60" autocomplete="off"
+                            [(ngModel)]="inputboxes['infoUnit']">
+                        </mat-form-field>
+                        <div class="content-btn">
+                            <button mat-stroked-button color="primary" *ngIf="activatedEditBtn !== 'infoUnit'" (click)="addRule('infoUnit')">주변정보 추가</button>
+                            <button mat-stroked-button color="primary" *ngIf="activatedEditBtn === 'infoUnit'" (click)="cancelEdit()">수정 취소</button>
+                            <button mat-stroked-button color="primary" *ngIf="activatedEditBtn === 'infoUnit'" (click)="modify('infoUnit')">주변정보 수정</button>
+                        </div>
+                        <h5>편의시설을 선택해주세요.(중복선택)</h5>
+                        <div class="checkbox-divider-half mgt10 mgb10">
+                            <mat-checkbox *ngFor="let item of facilities" color="primary" [checked]="onCheck('facilities', item.FacId)" (change)="editCheckList('facilities', $event, item.FacId)">{{item.FacNm}}</mat-checkbox>
+                        </div>
+                    </div>
+                    <div *ngIf="selectedTab === 1">
+                        <h5><i class="fa fa-circle" style="color: cadetblue;"></i> 비수기</h5>
+                        <div class="flex-btw border-bottom-ddd">
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주중</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>금</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주말</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
                             </mat-form-field>
                         </div>
-                    </form>
-                    <h5>기본정보를 입력해주세요.</h5>
-                    <ul class="list-decorate-dot">
-                        <li *ngFor="let info of optional.infoUnit; let i = index" (click)="editList('infoUnit', info, i)">
-                            {{info}}
-                            <button *ngIf="editItem === info" (click)="delList('infoUnit', i)"><i class="fa fa-minus"></i></button>
-                        </li>
-                    </ul>
-                    <mat-form-field>
-                        <mat-label>기본정보</mat-label>
-                        <input type="text" matInput placeholder="예) 유아 기준은 만 5세입니다." maxlength="60" autocomplete="off"
-                        [(ngModel)]="inputboxes['infoUnit']">
-                    </mat-form-field>
-                    <div class="content-btn">
-                        <button mat-stroked-button color="primary" *ngIf="activatedEditBtn !== 'infoUnit'" (click)="addRule('infoUnit')">주변정보 추가</button>
-                        <button mat-stroked-button color="primary" *ngIf="activatedEditBtn === 'infoUnit'" (click)="cancelEdit()">수정 취소</button>
-                        <button mat-stroked-button color="primary" *ngIf="activatedEditBtn === 'infoUnit'" (click)="modify('infoUnit')">주변정보 수정</button>
+                        <h5><i class="fa fa-circle" style="color: cornflowerblue;"></i> 준성수기</h5>
+                        <div class="flex-btw border-bottom-ddd">
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주중</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>금</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주말</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                        </div>
+                        <h5><i class="fa fa-circle" style="color: chartreuse;"></i> 성수기</h5>
+                        <div class="flex-btw border-bottom-ddd">
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주중</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>금</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주말</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                        </div>
+                        <h5><i class="fa fa-circle" style="color: burlywood;"></i> 할인기간</h5>
+                        <div class="flex-btw border-bottom-ddd">
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주중</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>금</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주말</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                        </div>
+                        <h5><i class="fa fa-circle" style="color: blueviolet;"></i> 지정기간</h5>
+                        <div class="flex-btw">
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주중</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>금</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                            <mat-form-field class="suffix-won">
+                                <mat-label>주말</mat-label>
+                                <input type="text" matInput autocomplete="off" value="0" maxlength="8" appDecimal appComma>
+                            </mat-form-field>
+                        </div>
                     </div>
-                    <h5>편의시설을 선택해주세요.(중복선택)</h5>
-                    <div class="checkbox-divider-half mgt10 mgb10">
-                        <mat-checkbox *ngFor="let item of facilities" color="primary" [checked]="onCheck('facilities', item.FacId)" (change)="editCheckList('facilities', $event, item.FacId)">{{item.FacNm}}</mat-checkbox>
+                    <div *ngIf="selectedTab === 2">
+                        <h4>대표사진(1장)</h4>
+                        <app-img-single></app-img-single>
+                        <h4>객실사진(9장)</h4>
+                        <app-img-multi></app-img-multi>
                     </div>
+                    <div *ngIf="selectedTab === 3">옵션</div>
                 </div>
             </as-split-area>
         </as-split>
