--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,3 +151,9 @@ h1, h2, h3, h4, h5, h6{
         cursor: pointer;
     }
 }
+
+.flex-btw{
+    display: flex;
+    justify-content: space-between;
+}
+.file{display: none;}
